# music_clion

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  MusicClion.ioc  Obsolete  STM32F407ZGTX_RAM.ld  STM32F407ZGTx_FLASH.ld
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dma.c  freertos.c  fsmc.c  gpio.c  i2s.c  main.c  sdio.c  spi.c  stm32f4xx_it.c
PrivateLibrary/AUDIOAnalysis/AudioFileParser/: AudioFileParser.cpp  AudioFileParser.h
PrivateLibrary/AUDIOAnalysis/mp3/: mp3play.cpp  mp3play.h
PrivateLibrary/AUDIOAnalysis/wav/: wavplay.cpp  wavplay.h
PrivateLibrary/Appmanage/Application/: Application.cpp  Application.h
PrivateLibrary/Appmanage/ApplicationManage/: ApplicationManage.cpp  ApplicationManage.h
PrivateLibrary/BSP/LCD/: lcd.c  lcd.h  lcd_ex.h
PrivateLibrary/BSP/SDRAM/: sram.c  sram.h
PrivateLibrary/BSP/SYSTEM/: delay.c  delay.h  sys.c
PrivateLibrary/BSP/TexT/: fonts.c  fonts.h  text.c  text.h
PrivateLibrary/BSP/Touch/: 24cxx.c  ft5206.c  gt9xxx.c  touch.c
PrivateLibrary/BSP/W25QXX/: norflash.c  norflash.h
PrivateLibrary/BSP/WM8978/: wm8978.c  wm8978.h
PrivateLibrary/BSP/malloc/: NewOperation.cpp  NewOperation.h  malloc.c  malloc.h
PrivateLibrary/Bridge/: Bradge.cpp  Bradge.h
PrivateLibrary/LVGLPAGEManage/: PageManage.cpp  PageManage.h  boot_anim_ascii.cpp  boot_anim_ascii.h
PrivateLibrary/Protocol/IIC/: myIIC99.c  myIIC99.h
PrivateLibrary/Protocol/IIS/: i2S2.c  i2S2.h
PrivateLibrary/Protocol/SPI/: Myspi.c
PrivateLibrary/Serial/BaseLib/: MyUsart.cpp  MyUsart.h  UsartResources.h
PrivateLibrary/Serial/DataStream/: inputStream.cpp  inputStream.h  outputStream.cpp  outputStream.h
PrivateLibrary/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
PrivateLibrary/UI/images/: ui_img_1088127317.c  ui_img_264944503.c  ui_img_655471181.c  ui_img_698092854.c  ui_img_850639887.c  ui_img_865762230.c  ui_img_930994846.c  ui_img_weather_png.c
PrivateLibrary/UI/screens/: MusicPage.c  ui_Screen1.c
PrivateLibrary/hal/: hal.cpp  hal.h
PrivateLibrary/hal/FileOperation/: exfuns.c  exfuns.h  fattester.c  fattester.h
PrivateLibrary/hal/button/: key.h
PrivateLibrary/hal/buzzer/: beep.c  beep.h
PrivateLibrary/lvgl/: lv_conf.h
PrivateLibrary/lvgl/porting/: lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
PrivateLibrary/lvgl/src/core/: lv_obj.c  lv_obj_style.h
PrivateLibrary/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
PrivateLibrary/lvgl/src/extra/others/ime/: lv_ime_pinyin.c
PrivateLibrary/lvgl/src/extra/widgets/menu/: lv_menu.c  lv_menu.h
PrivateLibrary/lvgl/src/font/: myFont16.c
PrivateLibrary/lvgl/src/misc/: lv_style_gen.c  lv_style_gen.h
PrivateLibrary/lvgl/src/widgets/: lv_btnmatrix.c  lv_img.c  lv_objx_templ.c  lv_objx_templ.h
PrivateLibrary/mooncake/: ManageApp.cpp  ManageApp.h  mooncake.cpp  mooncake.h
PrivateLibrary/mooncake/app/: app.h  app_manager.cpp
PrivateLibrary/mooncake/input_system/: input_device.h  input_device_register.cpp  input_device_register.h
PrivateLibrary/mooncake/simplekv/: simplekv.cpp  simplekv.h
User/: OSTask.cpp  OSTask.h  StatusList.cpp  StatusList.h
User/Application/Music/: Music.cpp  Music.h  MusicApp.cpp  MusicApp.h
