#此文件从模板自动生成! 请勿更改!
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_SYSTEM_VERSION 1)
cmake_minimum_required(VERSION 3.26)

# specify cross-compilers and tools
set(CMAKE_C_COMPILER arm-none-eabi-gcc)
set(CMAKE_CXX_COMPILER arm-none-eabi-g++)
set(CMAKE_ASM_COMPILER  arm-none-eabi-gcc)
set(CMAKE_AR arm-none-eabi-ar)
set(CMAKE_OBJCOPY arm-none-eabi-objcopy)
set(CMAKE_OBJDUMP arm-none-eabi-objdump)
set(SIZE arm-none-eabi-size)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

# project settings
project(MusicClion C CXX ASM)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 11)

#Uncomment for hardware floating point
add_compile_definitions(ARM_MATH_CM4;ARM_MATH_MATRIX_CHECK;ARM_MATH_ROUNDING)
add_compile_options(-mfloat-abi=hard -mfpu=fpv4-sp-d16)
add_link_options(-mfloat-abi=hard -mfpu=fpv4-sp-d16)

#Uncomment for software floating point
#add_compile_options(-mfloat-abi=soft)

add_compile_options(-mcpu=cortex-m4 -mthumb -mthumb-interwork)
add_compile_options(-ffunction-sections -fdata-sections -fno-common -fmessage-length=0)

# uncomment to mitigate c++17 absolute addresses warnings
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register")

# Enable assembler files preprocessing
add_compile_options($<$<COMPILE_LANGUAGE:ASM>:-x$<SEMICOLON>assembler-with-cpp>)

if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    message(STATUS "Maximum optimization for speed")
    add_compile_options(-Ofast)
elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "RelWithDebInfo")
    message(STATUS "Maximum optimization for speed, debug info included")
    add_compile_options(-Ofast -g)
elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "MinSizeRel")
    message(STATUS "Maximum optimization for size")
    add_compile_options(-Os)
else ()
    message(STATUS "Minimal optimization, debug info included")
    add_compile_options(-Og -g)
endif ()

include_directories(Core/Inc Drivers/STM32F4xx_HAL_Driver/Inc Drivers/STM32F4xx_HAL_Driver/Inc/Legacy Drivers/CMSIS/Device/ST/STM32F4xx/Include Drivers/CMSIS/Include
            User/Application/Music
            User/Application
            User
            FATFS/App
            FATFS/Target
            Middlewares/Third_Party/FatFs
            Middlewares/Third_Party/FatFs/src
            Middlewares/Third_Party/FreeRTOS/Source/include
            Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
            Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
            PrivateLibrary/AUDIOAnalysis/AudioFileParser
            PrivateLibrary/AUDIOAnalysis/wav
            PrivateLibrary/AUDIOAnalysis/mp3
            PrivateLibrary/AUDIOAnalysis/mp3/helix
            PrivateLibrary/AUDIOAnalysis/mp3/helix/pub
            PrivateLibrary/AUDIOAnalysis/mp3/helix/real
            PrivateLibrary/Appmanage/Application
            PrivateLibrary/Appmanage/ApplicationManage

            PrivateLibrary/UI
            PrivateLibrary/BSP/TexT
            PrivateLibrary/BSP/W25QXX
            PrivateLibrary/BSP/malloc
            PrivateLibrary/BSP/WM8978
            PrivateLibrary/BSP/LCD
            PrivateLibrary/BSP/SYSTEM
            PrivateLibrary/BSP/Touch
            PrivateLibrary/BSP/SDRAM
            PrivateLibrary/Bridge
            PrivateLibrary/Serial
            PrivateLibrary/Serial/DataStream
            PrivateLibrary/Serial/BaseLib
            PrivateLibrary/Serial/OtherLib
            PrivateLibrary/Protocol/IIC
            PrivateLibrary/Protocol/IIS
            PrivateLibrary/Protocol/SPI

            PrivateLibrary/lvgl
            PrivateLibrary/lvgl/src
            PrivateLibrary/lvgl/porting


            PrivateLibrary/LVGLPAGEManage
#            PrivateLibrary/mooncake
#            PrivateLibrary/mooncake/app
#            PrivateLibrary/mooncake/input_system
#            PrivateLibrary/mooncake/simplekv
            PrivateLibrary/hal
            PrivateLibrary/hal/button
            PrivateLibrary/hal/buzzer
            PrivateLibrary/hal/FileOperation

)

add_definitions(-DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx)

file(GLOB_RECURSE SOURCES "Core/*.*" "Drivers/*.*"
        "User/Application/Music/*.*"
        "User/Application/*.*"
        "User/*.*"
        "PrivateLibrary/lvgl/*.*"
        "PrivateLibrary/lvgl/src/*.*"
        "PrivateLibrary/lvgl/porting/*.*"
        "PrivateLibrary/hal/*.*"
        "PrivateLibrary/hal/button/*.*"
        "PrivateLibrary/hal/buzzer/*.*"
        "PrivateLibrary/hal/FileOperation/*.*"
        "PrivateLibrary/AUDIOAnalysis/wav/*.*"
        "PrivateLibrary/AUDIOAnalysis/mp3/*.*"
        "PrivateLibrary/AUDIOAnalysis/mp3/helix/*.*"
        "PrivateLibrary/AUDIOAnalysis/mp3/helix/pub/*.*"
        "PrivateLibrary/AUDIOAnalysis/mp3/helix/real/*.*"
        "PrivateLibrary/AUDIOAnalysis/AudioFileParser/*.*"
        "PrivateLibrary/UI/*.*"
        "PrivateLibrary/UI/images/*.*"
        "PrivateLibrary/UI/screens/*.*"
        "PrivateLibrary/Appmanage/Application/*.*"
        "PrivateLibrary/Appmanage/ApplicationManage/*.*"
        "FATFS/App/*.*"
        "FATFS/Target/*.*"
        "Middlewares/Third_Party/FatFs/*.*"
        "Middlewares/Third_Party/FatFs/src/*.*"
        "Middlewares/Third_Party/FatFs/src/option/*.*"
        "Middlewares/Third_Party/FreeRTOS/Source/*.*"
        "Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/*.*"
        "Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/*.*"

        "PrivateLibrary/BSP/TexT/*.*"
        "PrivateLibrary/BSP/W25QXX/*.*"
        "PrivateLibrary/BSP/malloc/*.*"
        "PrivateLibrary/BSP/WM8978/*.*"
        "PrivateLibrary/BSP/LCD/*.*"
        "PrivateLibrary/BSP/SYSTEM/*.*"
        "PrivateLibrary/BSP/Touch/*.*"
        "PrivateLibrary/BSP/SDRAM/*.*"
        "PrivateLibrary/Protocol/SPI/*.*"
        "PrivateLibrary/Bridge/*.*"
        "PrivateLibrary/Serial/*.*"
        "PrivateLibrary/Serial/DataStream/*.*"
        "PrivateLibrary/Serial/BaseLib/*.*"
        "PrivateLibrary/Serial/OtherLib/*.*"
        "PrivateLibrary/Protocol/IIC/*.*"
        "PrivateLibrary/Protocol/IIS/*.*"
        "PrivateLibrary/LVGLPAGEManage/*.*"
#        "PrivateLibrary/mooncake/*.*"
#        "PrivateLibrary/mooncake/app/*.*"
#        "PrivateLibrary/mooncake/input_system/*.*"
#        "PrivateLibrary/mooncake/simplekv/*.*"
)

set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/STM32F407ZGTX_FLASH.ld)

add_link_options(-Wl,-gc-sections,--print-memory-usage,-Map=${PROJECT_BINARY_DIR}/${PROJECT_NAME}.map)
add_link_options(-mcpu=cortex-m4 -mthumb -mthumb-interwork)
add_link_options(-T ${LINKER_SCRIPT})

add_executable(${PROJECT_NAME}.elf ${SOURCES} ${LINKER_SCRIPT})

set(HEX_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.hex)
set(BIN_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.bin)

add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
        COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_NAME}.elf> ${HEX_FILE}
        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
        COMMENT "Building ${HEX_FILE}
Building ${BIN_FILE}")
set(COMMON_FLAGS "-specs=nosys.specs -specs=nano.specs -u _printf_float ")